@@ -21,7 +21,6 @@ import zc.buildout.testing
 
 def setUp(test):
     zc.buildout.testing.buildoutSetUp(test)
-    zc.buildout.testing.install('RestrictedPython', test)
     zc.buildout.testing.install('ZConfig', test)
     zc.buildout.testing.install('ZODB3', test)
     zc.buildout.testing.install('pytz', test)
@@ -31,42 +30,32 @@ def setUp(test):
     zc.buildout.testing.install('zdaemon', test)
     zc.buildout.testing.install('zope.annotation', test)
     zc.buildout.testing.install('zope.app.applicationcontrol', test)
-    zc.buildout.testing.install('zope.applicationcontrol', test)
     zc.buildout.testing.install('zope.app.appsetup', test)
-    zc.buildout.testing.install('zope.app.component', test)
-    zc.buildout.testing.install('zope.app.container', test)
     zc.buildout.testing.install('zope.app.locales', test)
-    zc.buildout.testing.install('zope.app.pagetemplate', test)
     zc.buildout.testing.install('zope.app.publication', test)
+    try:
+        zc.buildout.testing.install('zope.applicationcontrol', test)
+    except AttributeError:
+        # BBB: for running tests with zopetoolkit < 1.0, e.g. Zope 2.12
+        pass
     zc.buildout.testing.install('zope.authentication', test)
     zc.buildout.testing.install('zope.broken', test)
     zc.buildout.testing.install('zope.browser', test)
-    zc.buildout.testing.install('zope.cachedescriptors', test)
     zc.buildout.testing.install('zope.component', test)
-    zc.buildout.testing.install('zope.componentvocabulary', test)
     zc.buildout.testing.install('zope.configuration', test)
     zc.buildout.testing.install('zope.container', test)
     zc.buildout.testing.install('zope.contenttype', test)
-    zc.buildout.testing.install('zope.copy', test)
-    zc.buildout.testing.install('zope.copypastemove', test)
-    zc.buildout.testing.install('zope.datetime', test)
-    zc.buildout.testing.install('zope.deferredimport', test)
-    zc.buildout.testing.install('zope.deprecation', test)
     zc.buildout.testing.install('zope.dottedname', test)
-    zc.buildout.testing.install('zope.dublincore', test)
     zc.buildout.testing.install('zope.error', test)
     zc.buildout.testing.install('zope.event', test)
     zc.buildout.testing.install('zope.exceptions', test)
     zc.buildout.testing.install('zope.filerepresentation', test)
-    zc.buildout.testing.install('zope.formlib', test)
-    zc.buildout.testing.install('zope.hookable', test)
     zc.buildout.testing.install('zope.i18n', test)
     zc.buildout.testing.install('zope.i18nmessageid', test)
     zc.buildout.testing.install('zope.interface', test)
     zc.buildout.testing.install('zope.lifecycleevent', test)
     zc.buildout.testing.install('zope.location', test)
     zc.buildout.testing.install('zope.minmax', test)
-    zc.buildout.testing.install('zope.pagetemplate', test)
     zc.buildout.testing.install('zope.processlifetime', test)
     zc.buildout.testing.install('zope.proxy', test)
     zc.buildout.testing.install('zope.publisher', test)
@@ -76,10 +65,34 @@ def setUp(test):
     zc.buildout.testing.install('zope.site', test)
     zc.buildout.testing.install('zope.size', test)
     zc.buildout.testing.install('zope.tal', test)
-    zc.buildout.testing.install('zope.tales', test)
     zc.buildout.testing.install('zope.testing', test)
     zc.buildout.testing.install('zope.traversing', test)
     zc.buildout.testing.install_develop('z3c.recipe.i18n', test)
+
+    # BBB: for running tests with zopetoolkit < 1.0, e.g. Zope 2.12
+    for project in ('RestrictedPython',
+                    'zope.app.basicskin',
+                    'zope.app.component',
+                    'zope.app.container',
+                    'zope.app.form',
+                    'zope.app.pagetemplate',
+                    'zope.app.publisher',
+                    'zope.cachedescriptors',
+                    'zope.componentvocabulary',
+                    'zope.copy',
+                    'zope.copypastemove',
+                    'zope.datetime',
+                    'zope.deferredimport',
+                    'zope.deprecation',
+                    'zope.dublincore',
+                    'zope.formlib',
+                    'zope.hookable',
+                    'zope.pagetemplate',
+                    'zope.tales'):
+        try:
+            zc.buildout.testing.install(project, test)
+        except AttributeError:
+            pass
 
 
 checker = renormalizing.RENormalizing([
@@ -96,7 +109,6 @@ checker = renormalizing.RENormalizing([
     # the following are for compatibility with Windows
     (re.compile('-  .*\.exe\n'), ''),
     (re.compile('-script.py'), ''),
-
     ])
 
 
